# pasta6

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs  certs-install.sh  certs-renew.sh  default.conf  init-postgres.sh  install.sh  package.json  shell.nix  tailwind.config.js
.cargo/: config
io-uring/: Cargo.toml  build.rs
io-uring/src/: lib.rs
io-uring/src/sys/: mod.rs  sys.rs
nginx/: certs.conf  default.conf  options-ssl-nginx.conf
pasta6/: Cargo.toml  Dockerfile  Makefile  benchmark.sh  benchmark_post.lua  build.rs  fly.toml
pasta6-benchmark/: Cargo.toml
pasta6-benchmark/src/: hyper.rs  main.rs
pasta6-server/: Cargo.toml
pasta6-server/src/: main.rs
pasta6/fuzz/: Cargo.toml
pasta6/sql/: schema.sql
pasta6/src/: app.rs  bin.rs  http.rs  lib.rs  main.rs  net.rs
pasta6/src/http/: client.rs  connection.rs  header.rs  mod.rs
pasta6/src/sys/: mod.rs
pasta6_core/: Cargo.toml
pasta6_core/src/: auth.rs  config.rs  error.rs  filter.rs  lib.rs  routes.rs  server.rs
pasta6_core/src/auth/: mod.rs  session.rs  user.rs
pasta6_core/src/error/: mod.rs  models.rs
pasta6_core/templates/: base.html
pasta6_home/: Cargo.toml  config.example.toml
pasta6_home/src/: filter.rs  lib.rs  main.rs
pasta6_home/templates/: index.html
pasta6_home/tests/: health_check.rs
pasta6_meta/: Cargo.toml  config.example.toml
pasta6_meta/src/: auth.rs  filter.rs  hash.rs  lib.rs  main.rs
pasta6_meta/src/auth/: db.rs  filter.rs  hash.rs  mod.rs  models.rs
pasta6_meta/src/auth/filter/: login.rs  logout.rs  mod.rs  profile.rs  register.rs
pasta6_meta/src/auth/store/: mod.rs  postgres.rs
pasta6_meta/src/filter/: login.rs  logout.rs  mod.rs  profile.rs  register.rs
pasta6_meta/templates/: base.html  index.html  login.html  profile.html  register.html
pasta6_meta/tests/: health_check.rs
pasta6_paste/: Cargo.toml  config.example.toml
pasta6_paste/src/: filter.rs  lib.rs  main.rs
pasta6_paste/src/paste/: db.rs  filter.rs  mod.rs  models.rs
pasta6_paste/templates/: base.html  index.html  paste.html
pasta6_paste/tests/: health_check.rs
pasta6_server/: Cargo.toml
pasta6_server/src/: auth.rs  main.rs  paste.rs  session.rs
pasta6_util/: Cargo.toml
src/: auth.rs  main.rs  paste.rs  session.rs
static/: index.html
templates/: base.html  index.html  paste.html  register.html
