[workspace]
members = [
    "pasta6_core",
    "pasta6_home",
    "pasta6_meta",
    "pasta6_paste",
    "pasta6_util",
]

[profile.dev.package.pasta6_core]
opt-level = 0

[profile.dev.package.pasta6_home]
opt-level = 0

[profile.dev.package.pasta6_meta]
opt-level = 0

[profile.dev.package.pasta6_paste]
opt-level = 0

[profile.dev.package.pasta6_util]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
# Necessary for flamegraphs to appear correctly.
debug = true