[workspace]
members = [
  "pasta6",
  "pasta6-benchmark",
]

# If the `test` crate is used (e.g. when calling `cargo test`) then the `std`
# crate is transitively included. The `std` crate defines a panic handler
# function. If there is more than one panic handler defined, then a
# `found duplicate lang item` error will occur.
#
# `pasta6-server` defines a panic handler function, so it must not be present
# in the workspace or `cargo test` will fail for the workspace.
exclude = ["pasta6-server"]
