[package]
name = "pasta6-io-uring"
version = "0.1.0"
edition = "2021"
description = "Userspace interface for io_uring"

[build-dependencies]
# [`bindgen`] automatically generates Rust FFI bindings to C (and some C++)
# libraries.
#
# This program uses `bindgen` to generate bindings to `linux/io_uring.h`.
#
# [`bindgen`]: https://crates.io/crates/bindgen
bindgen = { version = "0.59.2", default-features = false }

[dependencies]

libc = { version = "0.2.112", default-features = false }
