[package]
name = "pasta6-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]

hyper = { version = "0.14.16", default-features = false, features = ["http1", "client"]}
local-sync = { version = "0.0.5", default-features = false }
monoio = { version = "0.0.3", default-features = false, features = ["async-cancel", "utils"] }
monoio-compat = { version = "0.0.4", default-features = false }
tokio = { version = "1.15.0", default-features = false, features = ["io-util"] }
