[package]
name = "pasta6"
version = "0.1.0"
edition = "2021"

[lib]
name = "pasta6"
path = "src/lib.rs"

[[bin]]
name = "pasta6"
path = "src/bin.rs"
required-features = ["logging"]

[dependencies]
httparse = { version = "1.5.1", default-features = false, features = ["std"] }
bytes = { version = "1.1.0", default-features = false }
lunatic = { version = "0.7.1", default-features = false }
tracing = { version = "0.1.29", default-features = false, features = ["max_level_trace", "release_max_level_off"] }
tracing-subscriber = { version = "0.3.5", default-features = false, features = ["fmt", "std", "ansi", "tracing-log"], optional = true }

[dev-dependencies]
rand = { version = "0.8.4" , default-features = false, features = ["std", "std_rng"] }
regex = { version = "1.5.4", default-features = false, features = ["std", "unicode-gencat", "perf"] }

[target.'cfg(target_arch = "aarch64")'.dev-dependencies]
hyper = { version = "0.14.16", default-features = false, features = ["http1", "server", "tcp"] }
tokio = { version = "1.15.0", default-features = false, features = ["rt"] }

[features]
logging = ["tracing-subscriber"]
