[package]
name = "pasta6_core"
version = "0.1.0"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
edition = "2018"

[dependencies]
assert_matches = "1.3.0"
async-trait = "0.1.36"
base64 = "0.12.3"
bronco = "0.1.1"
chrono = "0.4.13"
deadpool-postgres = "0.5.6"
lazy_static = "1.4.0"
listenfd = "0.3.3"
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
sodiumoxide = "0.2.6"
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4"] }
toml = "0.5.6"
tracing = "0.1.19"
tracing-subscriber = "0.2.11"
warp = "0.2.4"