[package]
name = "pasta6_home"
version = "0.1.0"
authors = ["Nikita Pekin <contact@nikitapek.in>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "pasta6_home"

[dependencies]
askama = "0.10.3"
askama_warp = "0.10.0"
better-panic = "0.2.0"
deadpool-postgres = "0.5.6"
lazy_static = "1.4.0"
pasta6_core = { path = "../pasta6_core" }
tokio = { version = "0.2.22", features = ["macros"] }
tokio-postgres = { version = "0.5.5", features = ["with-chrono-0_4"] }
toml = "0.5.6"
warp = "0.2.4"

[dev-dependencies]
reqwest = "0.10.8"